# streamflow-postgresql

./: MANIFEST.in  Makefile  README.md  lint-requirements.txt  pyproject.toml  requirements.txt  test-requirements.txt  tox.ini
.github/codeql/: config.yml
.github/workflows/: ci-tests.yaml  release.yml
postgresql/: database.py  plugin.py
postgresql/schemas/: postgresql.json
streamflow/plugins/unito/postgresql/: database.py  plugin.py  version.py
streamflow/plugins/unito/postgresql/schemas/: postgresql.sql
streamflow_postgresql/: database.py  plugin.py
streamflow_postgresql/schemas/: postgresql.json  postgresql.sql
tests/: conftest.py  test_cwl_persistence.py  test_database.py  test_persistence.py
tests/cwl-conformance/: streamflow-docker.yml
tests/utils/: deployment.py  provenance.py  utils.py  workflow.py
