[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamflow-postgresql"
authors = [
    {name = "Iacopo Colonnelli", email = "iacopo.colonnelli@unito.it"}
]
description = "StreamFlow PostgreSQL plugin"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "LGPL-3.0-or-later"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]
dynamic = ["dependencies", "optional-dependencies", "version"]

[project.urls]
Package = "https://pypi.org/project/streamflow-postgresql"
Repository = "https://github.com/alpha-unito/streamflow-postgresql"

[project.entry-points]
"unito.streamflow.plugin" = {"unito.postgresql" = "streamflow_postgresql.plugin:PostgreSQLStreamFlowPlugin"}

[tool.setuptools]
packages = [
    "streamflow_postgresql"
]
zip-safe = true

[tool.setuptools.package-data]
"streamflow_postgresql" = ["schemas/*.json", "schemas/*.sql"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
version = {attr = "streamflow_postgresql.version.VERSION"}

[tool.setuptools.dynamic.optional-dependencies]
bandit = {file = "bandit-requirements.txt"}
lint = {file = "lint-requirements.txt"}
test = {file = "test-requirements.txt"}

[tool.isort]
profile = "black"