[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamflow-postgresql"
authors = [
    {name = "Iacopo Colonnelli", email = "iacopo.colonnelli@unito.it"}
]
description = "StreamFlow PostgreSQL plugin"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "LGPL-3.0-or-later"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "asyncpg==0.31.0",
    "streamflow==0.2.0.dev13"
]
version = "0.0.9"


[project.urls]
Package = "https://pypi.org/project/streamflow-postgresql"
Repository = "https://github.com/alpha-unito/streamflow-postgresql"

[project.entry-points]
"unito.streamflow.plugin" = {"unito.postgresql" = "streamflow.plugins.unito.postgresql.plugin:PostgreSQLStreamFlowPlugin"}

[dependency-groups]
dev = [
    {include-group = "bandit"},
    {include-group = "lint"},
    {include-group = "test"}
]
bandit = [
    "bandit==1.9.3"
]
lint = [
    "black==26.1.0",
    "codespell==2.4.1",
    "flake8-bugbear==25.11.29",
    "isort==7.0.0",
    "pyupgrade==3.21.0"
]
test = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-xdist==3.8.0"
]

[tool.setuptools]
packages = [
    "streamflow.plugins.unito.postgresql"
]
zip-safe = true

[tool.setuptools.package-data]
"streamflow.plugins.unito.postgresql" = ["schemas/*.json", "schemas/*.sql"]

[tool.isort]
profile = "black"